<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "Kuling">]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="main_activity_text">Make the right kiting decisions</string>
    <string name="main_activity_button_text">Get started</string>
    <string name="location_chooser_activity_title">Favourites</string>
    <string name="location_chooser_activity_subtitle">Where do you want to kite next?</string>
    <string name="location_viewer_activity_placeholder_location_name">Location Name</string>
    <string name="weather_data_url">"https://in2000-apiproxy.ifi.uio.no/weatherapi/locationforecast/2.0/"</string>
    <string name="location_search_fragment_search_hint">Search for kitespots</string>
    <string name="accessibilty_location_search_cardview_favourites_desc">Favourite-star not filled</string>
    <string name="location_viewer_activity_hour_forecast_title">24 hour forecast</string>
    <string name="location_viewer_activity_hour_text">Hour</string>
    <string name="location_viewer_activity_wind_direction_text">Wind\ndirection</string>
    <string name="location_viewer_activity_wind_speed_text">Wind speed\nm/s</string>
    <string name="location_viewer_activity_wind_gusts_text">Wind gusts\nm/s</string>
    <string name="user_preferences_activity_main_text">What level of wind &amp; gust speed do you prefer?</string>
    <string name="user_preferences_activity_wind_speed_desc">Wind speed</string>
    <string name="user_preferences_activity_gust_speed_desc">Wind gusts</string>
    <string name="location_cardview_wind_speed">Wind speed</string>
    <string name="location_cardview_wind_gusts">Wind gusts</string>
    <string name="location_cardview_today">Today</string>
    <string name="user_preferences_activity_speed_ms_desc">12 – 14 m/s</string>
    <string name="user_preferences_activity_text_apply">Apply</string>
    <string name="user_preferences_activity_text_default_settings">Default Settings</string>
    <string name="shared_preferences_preferences_file_name">com.example.team22.user_preferences</string>
    <string name="user_preferences_activity_mediocre">Mediocre</string>
    <string name="user_preferences_activity_perfect">Perfect</string>
    <string name="user_preferences_activity_difficult">Difficult</string>
    <string name="user_preferences_activity_mediocre_desc">Lower than your preferences</string>
    <string name="user_preferences_activity_perfect_desc">Your preferences</string>
    <string name="user_preferences_activity_difficult_desc">Higher than your preferences</string>
    <string name="user_preferences_activity_default_desc">Default wind speed is 7–10 m/s,\nand gust speed is 9–12 m/s.</string>
    <string name="explore_text_view_switch_button_desc">Sort by distance</string>
    <string name="kilometresdefault">2km</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_gusts">Wind gusts</string>
    <string name="default_settings_windspeed">7–10 m/s</string>
    <string name="default_settings_gust">9–12 m/s</string>
    <string name="card_view_location_image">location_image</string>
    <string name="navigation_activity_loading_location_text">Loading locations…</string>
    <string name="navigation_activity_loading_forecast_text">Loading forecast…</string>
    <string name="navigation_activity_loading_distance_text">Getting distances…</string>
    <string name="location_viewer_activity_longterm_forecast_title">7 day wind speed forecast</string>
    <string name="navigation_activity_bottom_bar_favourites">Favourites</string>
    <string name="navigation_activity_bottom_bar_map">Map</string>
    <string name="navigation_activity_bottom_bar_explore">Explore</string>
    <string name="navigation_activity_bottom_bar_settings">Settings</string>
    <string name="longterm_forecast_time_morning">02–08</string>
    <string name="longterm_forecast_time_midday">08–14</string>
    <string name="longterm_forecast_time_afternoon">14–20</string>
    <string name="longterm_forecast_time_night">20–02</string>
    <string name="location_distance_away">km away</string>
    <string name="language_code_iso_639">en</string>
    <string name="kilometer_value">km</string>
    <string name="temperature_degrees">%1$s°</string>
    <string name="explore_fragment_no_search_result">No result found for \"%1$s\"</string>
    <string name="user_preferences_slider_desc">Drag the sliders to enter your preferred wind speed and wind gusts. Please consider your weight, kiting equipment and experience.</string>
    <string name="user_preferences_default_desc">Recommended settings for beginners:</string>
    <string name="my_permissions">My location permissions</string>
    <string name="allow_permissions">Location permission: OFF</string>
    <string name="disallow_permissions">Location permission: ON</string>
    <string name="permissions_desc_on">&appname; will be able to estimate the distance between you and the destination. &appname;
        will sort your searches by distance proximity.</string>
    <string name="permissions_desc_on_link">Click here to deactivate location permission.</string>
    <string name="permissions_desc_off">&appname; will NOT be able to estimate the distance between you and the destination. &appname;
        will NOT sort your searches by distance proximity.</string>
    <string name="permissions_desc_off_link"><u>Click here to activate location permission.</u></string>
    <string name="favourite_fragment_no_favourites_title">No Favourites Added Yet</string>
    <string name="favourite_fragment_no_favourites_text">Go to Explore or Map to find your kitespots, then tap on ♥ to add a favourite!</string>
    <string name="my_weather_preferences">My weather preferences</string>
    <string name="about">About &appname;</string>
    <string name="about_desc">"&appname; is an application developed to support kiters in deciding when and where to kite. &appname; allows users to register their preferred level of wind speed and wind gusts. Based on user preferences, &appname; will present weather information tailored to their kiting preferences.\n\n&appname; was developed in 2020 by Alexandra Langeland, Brynjard Misvær, Ferdinand Hegelstad, Håkon Hernes and Sigrid M. Krishnan."</string>
    <string name="privacy">Privacy policy</string>
    <string name="privacy_desc">This privacy policy explains how &appname; collects and uses location based data:\n\n&appname;
        collects weather data from the Norwegian Meteorological Institute, using a proxy-server from the Institute for Informatics. When you give &appname;
        access to your location, the application will calculate the proximity between you and kiting locations. Your location-based data will NOT be stored and is only applied when the application is in use.\n\n&appname;
        uses Google Maps in order to provide map services. Information regarding their privacy policy is found here:\n\n<u>https://developers.google.com/maps/terms-20180207</u> </string>
    <string name="restart_message">Application may require restart after changing permissions.</string>
    <string name="timePeriod">%1$s \- %2$s</string>
    <string name="failed_weather_data_fetch_message">Failed to load weather</string>
    <string name="failed_location_data_fetch_message">Can\'t load locations</string>
    <string name="saved_preferences_feedback">Preferences were saved.</string>
    <string name="settings_icon_desc">Man kiting on water</string>
    <string name="retry_button"><u>Retry</u></string>
    <string name="settings_img_content_desc">Black &amp; White image of man kiting on water one-handed.</string>
</resources>
