<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/explore_constraint_main"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="fragment_search"

app:layout_constraintBottom_toTopOf="parent"
tools:context=".activities.LocationExploreFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:id="@+id/explore_constraint_layout_search_and_filter">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/locationSearchFragment_search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_search_24px"
            android:tint="@color/material_on_primary_disabled"
            android:scaleX="1.2"
            android:scaleY="1.2">

        </androidx.appcompat.widget.AppCompatImageView>
        


        <EditText
            android:id="@+id/locationSearchFragment_editText_searchField"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/app_name"
            android:hint="@string/location_search_fragment_search_hint"
            android:inputType="text"
            android:textSize="18sp"
            android:fontFamily="@font/nunito"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/locationSearchFragment_search_icon"
            app:layout_constraintEnd_toEndOf="parent"
            tools:layout_editor_absoluteX="15dp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/locationSearchFragment_clear_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_clear_24px"
            android:tint="@color/material_on_primary_disabled"
            android:visibility="invisible">

        </androidx.appcompat.widget.AppCompatImageView>






    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/explore_constraint_switch_button"
        app:layout_constraintTop_toBottomOf="@+id/explore_constraint_layout_search_and_filter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <TextView
            android:id="@+id/explore_text_view_switch_button_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito"
            android:text="@string/explore_text_view_switch_button_desc"
            android:textColor="@color/colorBlue"
            android:layout_marginStart="@dimen/side_margin"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"

            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/explore_switch_button_by_proximity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBaseline_toBaselineOf="@+id/explore_text_view_switch_button_desc"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="@dimen/side_margin"


            />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/explore_fragment_text_no_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/explore_constraint_switch_button"
        android:textAlignment="center"
        android:text="@string/explore_fragment_no_search_result"
        android:visibility="gone">

    </com.google.android.material.textview.MaterialTextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/explore_constraint_switch_button"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/locationSearchFragment_recyclerView_locations"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

        </androidx.recyclerview.widget.RecyclerView>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/explore_fragment_cardView_no_internet"
        app:cardBackgroundColor="@color/colorIndicatorRed"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        android:visibility="visible">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/explore_fragment_text_no_internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/failed_weather_data_fetch_message"
                android:textSize="12sp"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="@dimen/side_margin">

            </com.google.android.material.textview.MaterialTextView>
            
            <com.google.android.material.button.MaterialButton
                android:id="@+id/explore_fragment_button_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/side_margin"
                android:text="@string/retry_button"
                android:textSize="14sp"
                android:textColor="@color/colorBlack"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                >

            </com.google.android.material.button.MaterialButton>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>



    <ProgressBar
        android:id="@+id/explore_fragment_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"/>




</androidx.constraintlayout.widget.ConstraintLayout>