<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintBottom_toTopOf="parent"
    tools:context=".activities.LocationFavouritesFragment"
    android:tag="fragment_favourites">

    <TextView
        android:id="@+id/locationFavouritesFragment_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location_chooser_activity_title"
        android:textColor="#000000"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginTop="@dimen/side_margin"
        android:textSize="@dimen/header_size"
        android:fontFamily="@font/lato_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/locationFavouritesFragment_layout_line_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/locationFavouritesFragment_text_title"
        android:layout_marginStart="@dimen/side_margin"
        android:layout_marginEnd="@dimen/side_margin"
        android:paddingBottom="@dimen/side_margin"
        android:paddingTop="@dimen/side_margin">

        <View
            android:id="@+id/locationFavouritesFragment_view_line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#c0c0c0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/locationFavouritesFragment_layout_line_container"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/locationFavouritesFragment_recyclerView_locations"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </androidx.recyclerview.widget.RecyclerView>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/locationFavouritesFragment_container_no_favourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/locationFavouritesFragment_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="center"
                android:src="@drawable/ic_kite_img_new2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            </androidx.appcompat.widget.AppCompatImageView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/locationFavouritesFragment_text_no_favourites"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/favourite_fragment_no_favourites_title"
                android:fontFamily="@font/lato_bold"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationFavouritesFragment_image">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@string/favourite_fragment_no_favourites_text"
                android:textAlignment="center"
                android:fontFamily="@font/nunito"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/locationFavouritesFragment_text_no_favourites">

            </com.google.android.material.textview.MaterialTextView>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/favourites_fragment_cardView_no_internet"
        app:cardBackgroundColor="@color/colorIndicatorRed"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="0dp"
        app:cardElevation="0dp"
        android:visibility="invisible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/favourites_fragment_text_no_internet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/failed_weather_data_fetch_message"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                android:layout_marginStart="@dimen/side_margin">

            </com.google.android.material.textview.MaterialTextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/favourites_fragment_button_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="@dimen/side_margin"
                android:text="@string/retry_button"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"
                app:strokeColor="@color/colorBlack"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:visibility="invisible"
                >

            </com.google.android.material.button.MaterialButton>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>